Add Bungeecord IP Forwarding and start of Login protocol